buildscript {
    repositories {
        mavenCentral()
        mavenLocal()
        jcenter()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}")
    }
}

plugins {
    id 'com.palantir.docker' version "0.35.0"
    id "com.github.jk1.dependency-license-report" version "2.5"
    id "com.github.hierynomus.license" version "0.16.1"
    id "org.sonarqube" version "4.4.1.3373"
    id 'net.researchgate.release' version '3.0.2'
}

release {
    failOnCommitNeeded = false
    failOnUpdateNeeded = false
    failOnSnapshotDependencies = false
}


allprojects {
    // TODO remove
    apply plugin: 'maven-publish'
    apply plugin: "com.github.hierynomus.license"
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    group = 'com.demandware.carbonj'

    license {
        header rootProject.file('LICENSE-HEADER-JAVA')
        exclude "**/banner.txt"
    //    include "**/*.conf"
    }
}


subprojects {
    apply plugin: 'java'

    sourceCompatibility = 17
    targetCompatibility = 17
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    configurations.all {
    }

    dependencies {
        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.15.2'
        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.15.2'
        implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-smile', version: '2.15.2'
        implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.15.2'
        implementation group: 'com.google.re2j', name: 're2j', version: '1.7'
        testImplementation group: 'org.powermock', name: 'powermock-module-javaagent', version: '2.0.9'
        testImplementation group: 'org.jacoco', name: 'org.jacoco.agent', version: '0.8.10', classifier: 'runtime'
        testImplementation group: 'org.powermock', name: 'powermock-core', version: '2.0.9'

        testImplementation("junit:junit")
//        testImplementation("org.springframework.boot:spring-boot-starter-test")
    }


}